--- a/src/Components/GetUser/GetUser.css
+++ b/src/Components/GetUser/GetUser.css
@@ -9,6 +9,7 @@
     box-shadow: 2px 2px 14px rgb(216, 205, 205);
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .get-alluser-btn{
     margin: 10px;
@@ -28,6 +29,7 @@
 justify-content: space-between;
 align-items: center;
 border: 1px solid;
+border-radius: 3px;
 padding: 6px;
 margin: 5px;
 }
