--- a/src/Components/ManageUsers/ManageUser.css
+++ b/src/Components/ManageUsers/ManageUser.css
@@ -1,6 +1,6 @@
 .get-User,.get-flightOwner{
     height: 100%;
-    width: 100%;
+    width: 80%;
 }
 .sidebar-option{
     width: 60%;
